k8s/apps/backend-2/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-2-service
  labels:
    app: backend-2
spec:
  selector:
    app: backend-2
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
